# py-reference

./: .gitignore  README.md
basics/: dictionaries.ipynb  light_range_stove_script_args.py  list_array_iteration.ipynb
data/: 2022-04_inflation_data.xlsx  2022-05_inflation_data.xlsx  infl_shocks.csv
general/: strings.ipynb
general/.ipynb_checkpoints/: pathlib-checkpoint.ipynb
pandas/: snippets.py
pandas/.ipynb_checkpoints/: pandas_multiindexing-checkpoint.ipynb
plotting/: waterfall_charts.ipynb
plotting/plotnine/: Facet-grid_bar_plot.ipynb  balance_sheet.py  blance_sheet_example.ipynb  cashflow.py  gradient_bar.ipynb  illustrate_SL_diversification.html  tail_distribution_plotnine.html  tail_distribution_plotnine.ipynb  weatherData_Iran.html  weatherData_Iran.ipynb
plotting/plotnine/.ipynb_checkpoints/: Facet-grid_bar_plot-checkpoint.ipynb
plotting/plotnine/documents/: READMED.md  plotnine_requirements_to-be-updated.txt
plotting/production_ready/: matplotlib_high_quality_plot.ipynb  p9_production_ready.ipynb
plotting/production_ready/.ipynb_checkpoints/: p9_production_ready-checkpoint.ipynb
scipy_stats_optim/: optimizaiton_estimation-dave-ThinkPad-X1.py  pdf_cdf_ecdf.ipynb  pyproject.toml
scripts/: fivethirtyeight.py  inflation_analysis.py  min_ex.py  plotnine_matplotobj_range_area.py
webscrabbler_python/: analyse_snowforecast.py  snow_forecast_runner.sh  snow_forecast_scrabbler.py  snowforecast.csv  snowforecast2019-02-23_050901.csv  snowforecast2019-03-02_231029.csv  snowforecast2019-03-03_300915.csv
